# govProcu

./: .env.example  .gitignore  README.md  pyproject.toml
.planning/: PROMPTS-LOG.md  RETROSPECTIVE-2026-05-04.md
app/: __init__.py  config.py  server.py
app/clients/: g2b.py  (+1 more)
deploy/: Dockerfile  Dockerfile.frontend  docker-compose.full.yml  docker-compose.yml
docs/: AI-SDK-V6-MIGRATION.md  AI-TREND-RESEARCH.md  API_신청_진행_트래커.md  CACHE-STRATEGY.md  CACHE-WARMUP.md  DEPLOY.md  FRONTEND-TECH.md  GRAPH-FEASIBILITY.md  MARKET-RESEARCH.md  NOTIFICATIONS.md  OPERATIONS.md  PROMPTS-LOG.md  REPLAN.md  SCREENSHOT-VERIFY.md  SESSION-SUMMARY-2026-05-02-v2.md  SESSION-SUMMARY-2026-05-02-v3.md  SESSION-SUMMARY-2026-05-02-v4.md  SESSION-SUMMARY-2026-05-02-v5.md  SESSION-SUMMARY-2026-05-02.md  SESSION-SUMMARY-2026-05-03.md  TOOLS-CATALOG.md  TROUBLESHOOTING.md  UI-PLAN.md  USER-ACTIONS.md  USER-GUIDE.md  공공데이터포털_나라장터_API_활용신청_가이드.docx  나라장터_MCP_서버_구축_계획서.docx
frontend/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs
govprocu_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
logs/: TERMINAL-LOG.md  WORK-LOG.md
scripts/: .commit-msg.txt  archive_logs.py  build_api_guide.js  build_plan.js  etl_daily.py  etl_to_neo4j.py  etl_warmup.py  generate_synthetic_dataset.py  probe_external_apis.py  setup-git.ps1  test_g2b_call.ps1  verify_neo4j_poc.py
tests/: conftest.py  full-test-cases.json  measure_cold.sh  measure_defaults.sh  p0_results.md  p1p2_results.md  run_p0.py  test_bid.py
(+181 files in other folders)
