[project]
name = "govprocu-mcp"
version = "0.1.0"
description = "GovProcu MCP Server — 나라장터 OpenAPI를 LLM Tool로 노출하는 MCP 서버"
requires-python = ">=3.11"
authors = [{ name = "lapiogga", email = "lapiogga@gmail.com" }]
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis[hiredis]>=5.0.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
govprocu-mcp = "app.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
